packages/kit/test/apps/basics/src/routes/load/invalidation/route/server/+layout.server.js
/** @type {import('./$types').LayoutServerLoad} */
export function load({ route }) {
	return { route };
}
